fix dice buttons on iphone

--- a/src/App.scss
+++ b/src/App.scss
@@ -29,7 +29,7 @@
 }
 
 .number-btn {
-
+   padding: 2px;
 }
 
 @keyframes App-logo-spin {
